unmodifiable copy for CableTypeInput
Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>